@@ -2,6 +2,7 @@
 - [BREAKING] LayoutRuleset is now applied to both horizontal and vertical calculations
 - [BREAKING] UI minHeight now includes padding + margin in check
 - Added new FlexDirections; ROW_REVERSE and CENTER
+- Added Sprite#getAlpha() method
 - Added jacocoTestReport for better code coverage report
 - Fixed a bug in circle bounding box
 - (#53) Increased code coverage on Rectangle and Circle
